chore: disable threading and cross-origin isolation for web export

--- a/exports/web-export/web-export.html
+++ b/exports/web-export/web-export.html
@@ -112,8 +112,8 @@ body {
 
 		<script src="web-export.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":91709264,"web-export.wasm":48878298},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"web-export.service.worker.js"};
-const GODOT_THREADS_ENABLED = true;
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":false,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":91698480,"web-export.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"web-export.service.worker.js"};
+const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
