feat: update web export config and refactor background scenes

--- a/exports/web-export/web-export.html
+++ b/exports/web-export/web-export.html
@@ -38,7 +38,7 @@ body {
 }
 
 #status {
-	background-color: #242424;
+	background-color: #fff9ef;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -112,7 +112,7 @@ body {
 
 		<script src="web-export.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":false,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":91698480,"web-export.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"web-export.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":false,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":92435120,"web-export.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"web-export.service.worker.js"};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
