--- a/exports/web-export/web-export.html
+++ b/exports/web-export/web-export.html
@@ -112,7 +112,7 @@ body {
 
 		<script src="web-export.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":false,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":92453152,"web-export.wasm":52126319},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"web-export.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"emscriptenPoolSize":8,"ensureCrossOriginIsolationHeaders":false,"executable":"web-export","experimentalVK":false,"fileSizes":{"web-export.pck":92459392,"web-export.wasm":1588912},"focusCanvas":true,"gdextensionLibs":[],"godotPoolSize":4,"serviceWorker":"web-export.service.worker.js"};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
